js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/field-init-member-expression-this.js
DONOTEVALUATE
(
)
;
var
C
=
class
{
f
=
this
.
#
x
}
;
